// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`azure-resource-lookup - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "List, find, and show Azure resources across subscriptions or resource groups. Handles prompts like "list websites", "list virtual machines", "list my VMs", "show storage accounts", "find container apps", and "what resources do I have". USE FOR: resource inventory, find resources by tag, tag analysis, orphaned resource discovery, unattached disks, count resources by type, cross-subscription lookup, and Azure Resource Graph queries. DO NOT USE FOR: deploying/changing resources, cost optimization, or non-Azure clouds.",
  "extractedKeywords": [
    "accounts",
    "across",
    "aks",
    "analysis",
    "app service",
    "apps",
    "azure",
    "changing",
    "cli",
    "clouds",
    "container",
    "cosmos",
    "cost",
    "count",
    "cross-subscription",
    "deploying",
    "discovery",
    "disks",
    "find",
    "graph",
    "groups",
    "handles",
    "have",
    "inventory",
    "key vault",
    "keyvault",
    "kubernetes",
    "like",
    "list",
    "lookup",
    "machines",
    "mcp",
    "monitor",
    "non-azure",
    "optimization",
    "orphaned",
    "prompts",
    "queries",
    "rbac",
    "resource",
    "resources",
    "show",
    "sql",
    "storage",
    "subscriptions",
    "type",
    "unattached",
    "virtual",
    "websites",
    "what",
  ],
  "name": "azure-resource-lookup",
}
`;

exports[`azure-resource-lookup - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "accounts",
  "across",
  "aks",
  "analysis",
  "app service",
  "apps",
  "azure",
  "changing",
  "cli",
  "clouds",
  "container",
  "cosmos",
  "cost",
  "count",
  "cross-subscription",
  "deploying",
  "discovery",
  "disks",
  "find",
  "graph",
  "groups",
  "handles",
  "have",
  "inventory",
  "key vault",
  "keyvault",
  "kubernetes",
  "like",
  "list",
  "lookup",
  "machines",
  "mcp",
  "monitor",
  "non-azure",
  "optimization",
  "orphaned",
  "prompts",
  "queries",
  "rbac",
  "resource",
  "resources",
  "show",
  "sql",
  "storage",
  "subscriptions",
  "type",
  "unattached",
  "virtual",
  "websites",
  "what",
]
`;
